Closed
Bug 1625192
Opened 6 years ago
Closed 5 years ago
Support select element in VoiceOver
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla78
| Tracking | Status | |
|---|---|---|
| firefox78 | --- | verified |
People
(Reporter: eeejay, Assigned: eeejay)
Details
(Whiteboard: [mac2020_1])
Attachments
(2 files)
STR:
- Load
data:text/html,<select aria-label="food"><optgroup label="Fruits"><option>apple</option><option>banana</option></optgroup><optgroup label="Meats"><option>Chicken</option><option>Steak</option></optgroup><optgroup label="Veggies" disabled=""><option>Broccoli</option><option>Lettuce</option></optgroup><option>Everything</option><option disabled="">Nothing</option></select> - navigate to dropdown
- Activate it
Expected:
- Dropdown should be reported as a popup button with collapsed state
- Activating it should put the VO cursor in the popup
Actual:
- Dropdown is reported as a plain button
- Activating shows the menu but throws the VO cursor to the top-level window
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → eitan
| Assignee | ||
Updated•5 years ago
|
Priority: P2 → P1
Updated•5 years ago
|
Severity: normal → S3
| Assignee | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Comment 2•5 years ago
|
||
Depends on D75135
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/06b24a1970c7
Support select element and its dropdown menu. r=morgan
https://hg.mozilla.org/integration/autoland/rev/d5746e85b346
Introduce test for select dropdown. r=morgan
Comment 4•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/06b24a1970c7
https://hg.mozilla.org/mozilla-central/rev/d5746e85b346
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox78:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Updated•5 years ago
|
Flags: qe-verify+
Comment 5•5 years ago
|
||
Verified with 78.0b7 on macOS 10.15.5.
You need to log in
before you can comment on or make changes to this bug.
Description
•