Bug 1625192 - Introduce test for select dropdown. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D75136